<resources>
    <string name="app_name">Notes Application</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Sign up</string>
    <string name="edit">Save Edit</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="value">Value</string>
    <string name="key">Key</string>
    <string name="email">Email</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_age_limit">Age should be [18–50]</string>
    <string name="error_phone_length">Phone should be 10 character</string>
    <string name="department">Department</string>
    <string name="college">college</string>
    <string name="Profile" />
    <string name="Logout" />
</resources>